# dogbass

./: Makefile  README.md  build_backend.py  main.py  pyproject.toml
.github/: copilot-instructions.md
dogbass/: __init__.py  cli.py  docbase.py  errors.py  markdown.py
samples/: introducing-dogbass.md
tests/: test_build_backend.py  test_cli.py
